[package]
name = "mtu"
description = "Obtain the local network interface MTU towards a given IP address."
keywords = ["mozilla", "interface", "mtu"]
categories = ["network-programming", "web-programming"]
homepage = "https://github.com/mozilla/mtu/"
repository = "https://github.com/mozilla/mtu/"
authors = ["The Mozilla Necko Team <necko@mozilla.com>"]
readme = "README.md"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
# Don't increase beyond what Firefox is currently using:
# https://searchfox.org/mozilla-central/search?q=MINIMUM_RUST_VERSION&path=python/mozboot/mozboot/util.py
rust-version = "1.76.0"

[badges]
codecov = { repository = "mozilla/mtu", branch = "main" }
is-it-maintained-issue-resolution = { repository = "mozilla/mtu", branch = "main" }
is-it-maintained-open-issues = { repository = "mozilla/mtu", branch = "main" }
maintenance = { status = "actively-developed", branch = "main" }

[dependencies]
# Don't increase beyond what Firefox is currently using: https://searchfox.org/mozilla-central/source/Cargo.lock
libc = { version = "0.2.160", default-features = false }
static_assertions = { version = "1.1", default-features = false }

[target.'cfg(windows)'.dependencies]
# Don't increase beyond what Firefox is currently using: https://searchfox.org/mozilla-central/source/Cargo.lock
windows-core = { version = "0.58", default-features = false }
windows-targets = { version = "0.52", default-features = false }

[build-dependencies]
cfg_aliases = { version = "0.2", default-features = false }

[target.'cfg(not(windows))'.build-dependencies]
# Don't increase beyond what Firefox is currently using: https://searchfox.org/mozilla-central/source/Cargo.lock
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }

[target.'cfg(windows)'.build-dependencies]
windows-bindgen = { version = "0.58", default-features = false, features = ["metadata"] }

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
